--- a/net-snmp/CHANGES
+++ b/net-snmp/CHANGES
@@ -3,6 +3,506 @@ that have been applied in released versions.  Please see the NEWS file for
 a summary of the major changes, and the ChangeLog file for a comprehensive
 listing of all changes made to the code.
 
+*5.7*
+    snmplib:
+      - Added function netsnmp_delete_table_data_set().
+      - Added function netsnmp_delete_table_data_set(). Added declaration
+	for the function netsnmp_table_data_delete_table() in a public
+	agent header file.
+      - Added function netsnmp_delete_table_data_set(). Added declaration
+	for the function netsnmp_table_data_delete_table() in a public
+	agent header file. Fixed memory leak in
+	netsnmp_table_data_delete_table().
+      - Added function netsnmp_delete_table_data_set(). Added declaration
+	for the function netsnmp_table_data_delete_table() in a public
+	agent header file. Fixed memory leak in
+	netsnmp_table_data_delete_table(). Fixed memory leak triggered by
+	unregistering a table handler.
+      - Added macro netsnmp_static_assert().
+      - Added netsnmp_mib_handler.data_clone, a function pointer that
+	defines how to clone netsnmp_mib_handler.myvoid. Must be defined if
+	and only if data_free is set. The function netsnmp_handler_dup()
+	does now clone MIB handler private data if data_clone() is set.
+	Previously after duplicating a MIB handler and unregistering one of
+	the two MIB handlers, the private data pointer (myvoid) of the
+	other became a dangling pointer. Note: addition of
+	netsnmp_mib_handler.data_clone is an ABI change.
+      - Added snmp_sess_session_lookup().
+      - Added the function netsnmp_check_definedness(), which helps to find
+	the cause of undefined value errors as reported by Valgrind.
+      - Avoid that Valgrind complains about uninitialized data for the
+	buffers returned by netsnmp_callback_recv() and
+	netsnmp_callback_hook_build().
+      - Be const correct over calls to str* functions.
+      - Changed the argument type of debug_register_tokens() from char *
+	into const char *.
+      - Check that the argument to netsnmp_transport_copy is non-NULL
+      - Check the return value of strdup in netsnmp_create_data_list and
+	fail if strdup fails.
+      - Correct the extern "C" declarations to be consistent. Remove
+	commented out code.
+      - Fenner: fix sending of UDP responses from multihomed agents. Try to
+	send the response as it was before Net-SNMP 5.6 (assuming the
+	appropriate request was unicast) and only if it fails try to set
+	if_index (the request must be broadcast).
+      - Fixed bugs in asn_parse_unsigned_int64(),
+	asn_build_unsigned_int64(), asn_parse_signed_int64() and
+	asn_build_signed_int64(). Most but not all of these bugs were
+	specific to 64-bit systems. Fixes bug #3093199.
+      - Fixed memory leak triggered by calling se_add_pair_to_list() with a
+	value that already existed in the list.
+      - Invoking se_clear_slist() does no longer create a dangling pointer.
+      - Invoking se_clear_slist() does no longer create a dangling pointer.
+	Fixed leaks-at-exit triggered by using the snmp_enum code.
+      - Invoking se_clear_slist() does no longer create a dangling pointer.
+	Fixed leaks-at-exit triggered by using the snmp_enum code.
+	Documented behavior of se_add_pair(), se_add_pair_to_slist() and
+	clear_snmp_enum(). Made snmp_enum example consistent with the rest
+	of the code by adding strdup() calls and added a call to
+	se_clear_all_lists().
+      - Invoking se_clear_slist() does no longer create a dangling pointer.
+	Fixed leaks-at-exit triggered by using the snmp_enum code.
+	Documented behavior of se_add_pair(), se_add_pair_to_slist() and
+	clear_snmp_enum(). Made snmp_enum example consistent with the rest
+	of the code by adding strdup() calls and added a call to
+	se_clear_all_lists(). Fixed a memory corruption problem triggered
+	by the (undocumented) snmpd.conf "enum" keyword handler - storing
+	pointers to strings allocated on the stack in a global list does
+	not work.
+      - Remove the support for CMU compatibility since there is no way to
+	enable it and nobody have missed it.
+      - [BUG 3134323]: Fix crash when comparing invalid OIDs
+      - [PATCH 3165878]: Catch buffer overrun on 64-bit systems
+      - [PATCH 3195537]: Minor binary_array container sort optimization
+      - [PATCH 3203806]: Add the function netsnmp_large_select().
+      - [PATCH 3203806]: Make netsnmp_large_fd_set_resize() clear all
+	relevant file descriptors.
+      - [PATCH 3203806]: Minor performance optimization of
+	netsnmp_large_fd_set_resize().
+      - add IPv6 support to DTLSUDP transport
+      - add IPv6 support to DTLSUDP transport use new
+	netsnmp_sockaddr_storage in netsnmp_addr_pair
+      - add IPv6 support to DTLSUDP transport use new
+	netsnmp_sockaddr_storage in netsnmp_addr_pair add base_transport
+	ptr for tunneled transports
+      - add more openssl error cases where we check for local cert
+      - add new transport config tokens localCert/peerCert, deprecate
+	our_identity, their_identity
+      - add optional support for local DNSSEC validation of hostnames	-
+	optional at configure time: --with-local-dnssec-validation -
+	requires DNSSEC-Tool validation libraries - initial support, for
+	systems with getaddrinfo. support for additional resolver
+	interfaces coming soon. - also TODO: flag for ignoring validatoin
+	errors (log & continue)
+      - dont return empty array
+      - force a ; at the end of the static_assert macro.
+      - introduce new localCert/peerCert, deprecate serverCert, clientCert,
+	defX509ServerPub, defX509ClientPub
+      - netsnmp_handler_dup(): freeing the duplicated handler no longer
+	causes a crash (double free) when handler->myvoid of the original
+	handler was non-NULL.
+      - realloc+init instead of calloc inspired by patch 3195532 from
+	Stephen Hemminger
+      - refine cert debugging; remove unused function
+      - remove inline versions of container funcs
+      - snmp_shutdown(): added call to netsnmp_certs_shutdown().
+
+    snmp:
+      - patch: 3096725: sysORTable registation for notification log mib
+	original patch fixed several issues, other parts applied earlier
+
+    snmpd:
+      - Add missing function declaration
+      - Added functions netsnmp_handler_owns_tabreq(),
+	netsnmp_registration_owns_tabreq(), netsnmp_iterator_clone().
+	Exported netsnmp_table_registration_info_clone().
+      - Added functions netsnmp_handler_owns_tabreq(),
+	netsnmp_registration_owns_tabreq(), netsnmp_iterator_clone().
+	Exported netsnmp_table_registration_info_clone(). Modified
+	netsnmp_iterator_delete_table() such that it frees the table
+	registration information stored in a table iterator too. Modified
+	netsnmp_get_table_iterator_handler() such that the table iterator
+	passed to this function is freed when the associated handler is
+	freed. Restored the behavior of netsnmp_get_table_handler() to that
+	of r19449, that is, not setting up the data_free pointer because
+	not all callers of netsnmp_get_table_handler() expect that table
+	registration information is freed when the associated handler is
+	freed.
+      - Added netsnmp_get_table_iterator2().
+      - Added netsnmp_get_table_iterator2(). Added
+	netsnmp_register_table_iterator2().
+      - Added netsnmp_get_table_iterator2(). Added
+	netsnmp_register_table_iterator2(). Added
+	netsnmp_handler_owns_iterator_info().
+      - Added netsnmp_get_table_iterator2(). Added
+	netsnmp_register_table_iterator2(). Added
+	netsnmp_handler_owns_iterator_info(). Fixed leak-at-exit triggered
+	by snmpNotifyTable.
+      - Added netsnmp_get_table_iterator2(). Added
+	netsnmp_register_table_iterator2(). Added
+	netsnmp_handler_owns_iterator_info(). Fixed leak-at-exit triggered
+	by snmpNotifyTable. Fixed leak-at-exit triggered by
+	snmpTargetAddrTable. Also, restored backwards compatibility of
+	netsnmp_register_table_iterator().
+      - Added netsnmp_register_watched_instance2(),
+	netsnmp_register_watched_scalar2(), netsnmp_clone_watcher_info()
+	and netsnmp_owns_watcher_info(). See also the Doxygen comments for
+	more info.
+      - Added netsnmp_unregister_auto_data_table().
+      - Added reference count in the netsnmp_baby_steps_modes data
+	structure and made sure that this data structure is automatically
+	freed when the handler that owns it is unregistered.
+      - Added snmp_sess_session_lookup(). Call shutdown_master_agent() and
+	shutdown_agent() during shutdown.
+      - Added snmp_sess_session_lookup(). Call shutdown_master_agent() and
+	shutdown_agent() during shutdown. The function clean_subtree() does
+	no longer trigger double frees and invalid memory reads. Note: this
+	function was already wrong at the time it was introduced (patch
+	#724925 / r8531, July 2003).
+      - Added snmp_sess_session_lookup(). Call shutdown_master_agent() and
+	shutdown_agent() during shutdown. The function clean_subtree() does
+	no longer trigger double frees and invalid memory reads. Note: this
+	function was already wrong at the time it was introduced (patch
+	#724925 / r8531, July 2003). Removed a comment in
+	netsnmp_handler_free() that is now obsolete because of the
+	clean_subtree() changes.
+      - Added snmp_sess_session_lookup(). Call shutdown_master_agent() and
+	shutdown_agent() during shutdown. The function clean_subtree() does
+	no longer trigger double frees and invalid memory reads. Note: this
+	function was already wrong at the time it was introduced (patch
+	#724925 / r8531, July 2003). Removed a comment in
+	netsnmp_handler_free() that is now obsolete because of the
+	clean_subtree() changes. Modified netsnmp_deregister_agent_nsap()
+	such that it never examines sessions that already have been closed.
+	It is for this change that it was necessary to introduce the new
+	function snmp_sess_session_lookup().
+      - Added the functions netsnmp_duplicate_variable() and
+	netsnmp_cache_handler_owns_cache().
+      - Added the functions netsnmp_duplicate_variable() and
+	netsnmp_cache_handler_owns_cache(). Memory allocated by
+	netsnmp_register_old_api() for storing SNMP variables is now freed
+	when the associated handler is unregistered.
+      - Added the functions netsnmp_duplicate_variable() and
+	netsnmp_cache_handler_owns_cache(). Memory allocated by
+	netsnmp_register_old_api() for storing SNMP variables is now freed
+	when the associated handler is unregistered. Callback function data
+	deallocation does no longer free the memory allocated for the
+	AgentX session - the memory that was allocated for AgentX sessions
+	is now deallocated just as that for any other session. This fixes a
+	leak-at-exit.
+      - Added the functions netsnmp_duplicate_variable() and
+	netsnmp_cache_handler_owns_cache(). Memory allocated by
+	netsnmp_register_old_api() for storing SNMP variables is now freed
+	when the associated handler is unregistered. Callback function data
+	deallocation does no longer free the memory allocated for the
+	AgentX session - the memory that was allocated for AgentX sessions
+	is now deallocated just as that for any other session. This fixes a
+	leak-at-exit. Notify filter table: Callback function data
+	deallocation does no longer free the data in *	  
+	*snmpNotifyFilterTable_if_ctx.container - this is now done by  
+	shutdown_snmpNotifyFilterTable() and
+      - Automatically free the private data structure allocated by
+	netsnmp_container_table_handler_get().
+      - Builds with most recent MinGW (having #define localtime_r).
+      - Count the number of users of a netsnmp_cache data structure instead
+	of duplicating it.
+      - Declare the OID argument type of MIB registration functions as
+	'const oid *' instead of 'oid *' since these functions do not
+	modify the OID.
+      - Do not leak the limits of scalar_group objects on shutdown.
+      - Extend the documentation for data_clone and data_free
+      - Factor out common config_add_mib statments
+      - Find out whether librpm is available before configuring the agent
+	modules because host/data/access/swinst needs symbol HAVE_LIBRPM.
+	As a result, configure has to be run only once instead of twice to
+	enable the hrSWInstalled table on systems that have librpm.
+      - Fixed a double free at exit that was triggered by cleaning up the
+	data structures used for embedded Perl support.
+      - Fixed a year-2038 bug in the implementation of ipRouteTable.
+      - Introduced netsnmp_pid_t.
+      - MIB-specific leak-at-exit fixes.
+      - Make it possible to copy watched data items without memory leaks.
+      - Make the setting of the argvrestart* variables optional on
+	USING_UTIL_FUNCS_RESTART_MODULE.
+      - Make the setting of the argvrestart* variables optional on
+	USING_UTIL_FUNCS_RESTART_MODULE. Remove util_funcs/restart from the
+	requirement sets of util_funcs and default_modules.
+      - Make the setting of the argvrestart* variables optional on
+	USING_UTIL_FUNCS_RESTART_MODULE. Remove util_funcs/restart from the
+	requirement sets of util_funcs and default_modules. Add
+	util_funcs/restart to the requirement set of ucd-snmp/versioninfo.
+      - Patch 3141462: from fenner: fix agentx subagent issues with
+	multiple-object requests
+      - Patch from Niels to fix VACM persistant storage.
+      - Remove unused variable cmp
+      - Remove util_funcs/Exit from the requirement sets of util_funcs and
+	default_modules.
+      - Remove util_funcs/Exit from the requirement sets of util_funcs and
+	default_modules. Never use Exit to terminate the agent.
+      - Removing the last cache via netsnmp_cache_remove() does no longer
+	trigger a crash.
+      - Update the length of sysObjectID as well as the data when it is set
+	from a configuration file.
+      - Use the same autoconf symbol to decide both if strcasecmp should be
+	declared and if it should be defined.
+      - [BUG 1840230]: Don't include the index object as
+	(pseudo-)accessible column.
+      - [BUG 3058101]: Writeable 'long' instances work on 64-bit systems,
+	but not writable 'int's
+      - [BUG 3062538]: Fix com2sec* handling of non-default contexts
+      - [BUG 3205765]: handle reconfig for certSecName token
+      - [BUG ]: enforce max length on TLS secName maps
+      - [BUG ]: enforce max length on TLS secName maps add priority to
+	secname debugging
+      - [PATCH 2119725]: Fix skipNFSInHostResources handling of
+	hrStorageTable
+      - [PATCH 2941811]: Handle successful requests with reqID 0
+      - [PATCH 2975254]: Avoid callback re-use of closed sessions Qn:
+	Should this also be applied when main session is NULL?
+      - [PATCH 3053436]: from: takevos: fix: tcpConnectionTable_data_access
+	invalid memory access
+      - [PATCH 3057090]: make ethtool support on linux use the high speed
+	struct info for 100G+.
+      - [PATCH 3057093]: allow linux to use libpci for creating useful
+	ifDescr strings
+      - [PATCH 3096725]: Don't register v1Trap callback, if SNMPv1 is not
+	supported
+      - [PATCH 3096725]: Include SNMPv1 trap OIDs in nlmLogNotificationID
+	column
+      - [PATCH 312596]: listen for netlink change events for the
+	arp-related tables
+      - [PATCH 3152412]: Handle (and report) problems reading /proc/vmstat
+      - [PATCH 3203806]: Avoid that the main agent processing loop - when
+	using more than FD_SETSIZE file descriptors - can cause memory
+	corruption by invoking select().
+      - [PATCH ]: optimizations for large route tables from Stephen
+	Hemminger applied parts 1-3 of 4 from him (msgs to coders on
+	2/28/11; subject ip-forward-mib performance improvements; part 4
+	needs more work
+      - add debug for cert find hint as string/int
+      - add newly created/destroyed interfaces to ipv6IfTable The list of
+	interfaces was never refreshed, now it is reloaded every time the
+	table is accessed. I've also fixed a memory leak and optimized the
+	loading of the list a bit.
+      - com2sec6 directive: If configure has not found getaddrinfo(),
+	non-numeric IPv6 addresses do now trigger an error message.
+      - don't second-guess cache handler (waves hand) this is not the
+	function you are looking for. netsnmp_cache_is_valid() is not meant
+	for mib modules
+      - example MIB: Added shutdown function that frees all memory owned by
+	this MIB implementation.
+      - fix double free in TLS error handling
+      - fixed the agent writing 'looks like a 64bit wrap, but prev!=new' in
+	syslog when computing ipSystemStats Without the memcpy,
+	prev_vals->stats and new_vals->stats could get different, which
+	could much much later (when a counter gets bigger than 32 bits)
+	result in 'prev!=new' message in syslog. Typically this happens
+	after long time of uptime and it is very hard to reproduce.
+      - host/data_access/swinst_rpm: Fixed a memory leak in
+	netsnm_swinst_arch_init().
+      - host/data_access/swinst_rpm: Pass correct path to rpmdbOpen() such
+	that opening the database succeeds.
+      - host/data_access/swinst_rpm: Pass correct path to rpmdbOpen() such
+	that opening the database succeeds. host/data_access/swinst_rpm:
+	Log an error message if rpmdbOpen() fails.
+      - instead of relying on NETSNMP_DS_LIB_APPTYPE, break out cert table
+	inits to new agent cert init function, called from init_agent.
+      - netsnmp_cache_free(): A more detailed message is now logged when
+	attempting to free a cache that is still in the cache list.
+      - reworked hrStorageTable to support large filesystems. The
+	hrStorageAllocationUnits does not report real allocation unit size,
+	but some calculated value so hrStorageAllocationUnits *
+	hrStorageSize gives real size of the filesystem. This calculation
+	happens only when hrStorageSize is too small (32bits) for
+	filesystem size, e.g. filesystems larger than 8TB with 4096 bytes
+	block size. This calculation can be turned off by
+	'realStorageUnits' config option.
+      - skip non-AF_INET interfaces when loading ipv4 addrs
+      - snmpd is again single-threaded. [PATCH 2959811]: Safranek:
+	Reimplement Linux Netlink IPv6 prefix listener.
+
+    snmptrapd:
+      - Fixed a double free at exit that was triggered by cleaning up the
+	data structures used for embedded Perl support. Fixed a double free
+	at exit that was triggered by cleaning up the data structures used
+	for embedded Perl support. Valgrind reported that double free as
+	follows: Invalid read of size 4 at 0x59D0501: perl_destruct (in
+	/usr/lib/perl5/5.12.1/x86_64-linux-thread-multi/CORE/libperl.so) by
+	0x544DF8E: shutdown_perl (snmp_perl.c:166) by 0x403966:
+	term_handler (snmptrapd.c:318) by 0x6D43A5F: ??? (in
+	/lib64/libc-2.11.2.so) Address 0x7660f88 is 56 bytes inside a block
+	of size 2,912 free'd at 0x4C26496: free (vg_replace_malloc.c:366)
+	by 0x544DF9A: shutdown_perl (snmp_perl.c:167) by 0x6DDADF2:
+	__select_nocancel (in /lib64/libc-2.11.2.so) by 0x404E20: main
+	(snmptrapd.c:1258)
+
+    apps:
+      - [PATCH 3054817]: Adds per-variable timed output support to snmpwalk
+	using -CT
+      - add snmp.conf tokens for timeouts and retries
+
+    build:
+      - [BUG 3088360]: Ensure python modules are built against the correct
+	libraries
+
+    building:
+      - Fix --with-security-modules handling Allow repeated modules
+	(tsm,tsm) as well as defailt modules (usm) Move the generation of
+	the files after the checking
+      - Make it possible to regenerate using autoconf 2.68.
+      - Some systems do not support the -E flag to grep, use autoconf to
+	find the right egrep at all times.
+      - check for /dev/kmem instead of assuming it exists and hardcoding
+	when it is not there
+
+    libnetsnmp:
+      - made the SSH transport configurable as it should be.
+
+    libnetsnmpmibs:
+      - Make all functions in the dlmod module that don't have to be public
+	static
+
+    mib2c:
+      - [PATCH 3175323]: Fix handling of 'while (false)' blocks
+      - [PATCH 3204883]: Fix handling of non-table objects named fooTable
+      - [PATCH 3211484]: Support enumerations in notification varbinds
+      - make the mib2c foreach ranges work as advertised in the comments.
+
+    packaging:
+      - Enable micro-and-macro-feature management within Net-SNMP; this
+	adds a number of new flags to configure (--enable-minimalist and
+	--enable-read-only). These changes are designed to remove much of
+	the inline code that isn't always necessary or desired. Scripts
+	exist (and will be improved) to stip out unused components from the
+	code entirely to enable a shorter review process for upgrading to
+	new releases. This work was done by Wes Hardaker and Michael Baer
+	from SPARTA, Inc. but is being checked in as a large patch since
+	converting the micro patches from git to svn turend out to be
+	impossible
+
+    patch 3140833:
+      - fix proxy GETNEXT requests When OIDs requested are below the proxy
+	request remap, we need to not include any OIDs that might be in the
+	space between the original OID and the remapped OID. This patch
+	fudges the request so that it fixes the request OID so it's just
+	before the remapped proxy range.
+
+    patch 3184026:
+      - Avoid constant refresh of interface statistics
+
+    perl:
+      - patch 3049029: from fennec: fix a memory leak with snmp bulkwalks
+      - patch from Martin Buck: don't always open stderr as the calls to
+	snmp_log already do this and it messes up the agent when embedded
+
+    python:
+      - [PATCH 3185085]: Fix segfault on 64-bit systems
+
+    testing:
+      - Add missing preconditions
+      - Added function netsnmp_delete_table_data_set(). Added declaration
+	for the function netsnmp_table_data_delete_table() in a public
+	agent header file. Fixed memory leak in
+	netsnmp_table_data_delete_table(). Fixed memory leak triggered by
+	unregistering a table handler. Unit tests can now invoke functions
+	from libagent.
+      - Added function netsnmp_delete_table_data_set(). Added declaration
+	for the function netsnmp_table_data_delete_table() in a public
+	agent header file. Fixed memory leak in
+	netsnmp_table_data_delete_table(). Fixed memory leak triggered by
+	unregistering a table handler. Unit tests can now invoke functions
+	from libagent. Added unit test for table_dataset.
+      - Added inet_ntop() and inet_pton() unit test.
+      - Added netsnmp_mib_handler.data_clone, a function pointer that
+	defines how to clone netsnmp_mib_handler.myvoid. Must be defined if
+	and only if data_free is set. The function netsnmp_handler_dup()
+	does now clone MIB handler private data if data_clone() is set.
+	Previously after duplicating a MIB handler and unregistering one of
+	the two MIB handlers, the private data pointer (myvoid) of the
+	other became a dangling pointer. Note: addition of
+	netsnmp_mib_handler.data_clone is an ABI change. added more test
+	cases to the handler registration test.
+      - Generate a normal #line directive as per C99 instead of the
+	compiler-specific #<n>-directive.
+      - Introduced new test type next to capp and clib: cagentlib.
+      - It is again possible to run an individual test via the script
+	testing/RUNTESTS.
+      - It is now possible to analyze the unit tests with Valgrind by
+	setting the environment variables SNMP_SAVE_TMPDIR and
+	DYNAMIC_ANALYZER. An example: (export SNMP_SAVE_TMPDIR=yes
+	DYNAMIC_ANALYZER="valgrind --trace-children=yes --leak-check=full";
+	cd testing && ./RUNFULLTESTS -g unit-tests)
+      - Test 71 (com2sec6_simple) does now succeed even if IPv6 DNS
+	resolution is not available.
+      - Test T030 does now pass on MinGW.
+      - auto-create user specified SNMP_TMPDIR and SNMP_TMP_PERSISTENTDIR
+	too; default SNMP_TMP_PERSISTENDIR based on SNMP_TMPDIR for user
+	specified SNMP_TMPDIR
+
+    Generic:
+      - Make it possible to build static applications using net-snmp-config
+	and the -*libs flags once more.
+      - [BUG 3102904]: All Net-SNMP C source files are now compiled with
+	-fno-st rict-aliasing, at least if the configured compiler supports
+	this flag.
+      - [PATCH 3074918]: from weizheng: check for CONTAINER_INSERT failures
+	and react appropriately to avoid memory leaks
+      - [PATCH 3167325]: from krisztoforo: UCD-SNMP/SystemStats: add
+	variables to report cpusteal, cpuguest, cpuguestnice
+
+    Cygwin:
+
+    Linux:
+      - [PATCH 3083027]: Fix RPM spec file to support CentOS
+      - [PATCH 3205811]: Option to skip fd/loop/ram devices in diskIOTable
+      - agent: ipNetToPhysicalTable: Do not log an error message if one or
+	more interfaces are present that do not have such information
+	(NUD_NOARP), e.g. tunnels. Reported by Stephen Hemminger. See also
+	patch #3107003.
+      - snmpd is again single-threaded.
+
+    MinGW:
+      - Made regression test output independent of the Net-SNMP variables
+	defined in the Windows registry. Some tests that failed previously
+	after the Net-SNMP binaries (MSVC build) had been installed do now
+	pass.
+      - configure: Detection of the functions gai_strerror(),
+	getaddrinfo(), gethostbyname() and gethostname() does now succeed.
+      - testing: If the agent has been asked to stop, wait until the snmpd
+	process disappeared before proceeding.
+
+    NetBSD:
+      - DragonFly support [From NetBSD patch archive]
+
+    OpenBSD:
+      - Update SWRun code to use kvm_getproc2 [From OpenBSD patch archive]
+
+    Win32:
+      - Avoid that MSVC reports a warning message about redefinition of the
+	malloc() macro during building the Net-SNMP source code.
+      - Deprecated libsnmp.def - add NETSNMP_IMPORT to function
+	declarations instead to export a function from netsnmp.dll.
+      - Guard netsnmp_udp_recvfrom() etc. declarations consistently. Builds
+	with Visual Studio 2010.
+      - Introduced netsnmp_pid_t. Eliminated casts between int and HANDLE
+	in agent/mibgroup/util_funcs.c and
+	agent/mibgroup/ucd-snmp/pass_persist.c.
+      - When snmpd.exe is started in a command prompt window, the snmpd
+	process now stops upon the first key press. This makes it easier to
+	debug snmpd.exe for memory leaks.
+      - [PATCH 3085187]: Building via the Microsoft Visual Studio project
+	file (.dsw/.dsp) works again.
+      - [PATCH 3293842]: Eliminate registry argument limit of 127
+	characters (this limitation was reported by Sylvain Dery).
+      - building: Avoid that MSVC 2010 prints a warning message about
+	redefining EADDRINUSE.
+      - building: Builds now correctly with a 64-bit compiler.
+      - building: batch build with OpenSSL enabled and with recent OpenSSL
+	development files works again.
+      - header file <net-snmp/net-snmp-config.h> can now be used in the
+	MinGW environment.
+      - testing: Avoid that T200 fails on known Microsoft SNMP extension
+	DLL bugs.
 
 *5.6*
 
